modify code